Wed Jun 14 18:08:53 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Remove compliated class heirarchy for Stemming algorithms: replace
	  by OmStem::Internal, which has function pointers.  Neccessitated
	  changing parameters taken by each stemming algorithm to a void *
	  instead of a specific struct pointer.

Wed Jun 14 18:07:43 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Added test of OmStem::get_available_langs() to apitest: currently
	  disabled, since this is unimplemented.

Wed Jun 14 17:37:01 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* All classes except Om*Decider now added, although some are
	  incomplete.  OmBatchEnquire, OmDocumentContents, and
	  OmDocumentTerm need more work, but the rest should be
	  usable, at least from Python.

Wed Jun 14 17:02:06 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Added docs/distributed.txt to the distribution tarfile. (Oops!)

Wed Jun 14 14:24:20 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Added OmDatabase, OmWritableDatabase, and OmExpandOptions to
	  SWIG interface.

Wed Jun 14 12:14:42 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Added OmDocument, OmRSet, OmESet, OmEnquire::get_eset(), and
	  OmEnquire::get_doc() to SWIG bindings, and implemented bits
	  needed for Python.

Tue Jun 13 18:04:43 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Added OmEnquire::get_matching_terms() and OmMatchOptions to
	  SWIG bindings.

Tue Jun 13 17:37:00 BST 2000 Olly Betts

	* Added get_wdf() method to PostList

	* Tweaked MultiPostList::get_weight()

	* Added OM_MOP_PHRASE (not yet implemented)

Tue Jun 13 17:24:22 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Added script to generate an HTML version of the TODO list.

Tue Jun 13 16:49:13 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* The scripting wrappers can now make queries with operations
	  other than OR and AND.
