@@ -49,57 +49,49 @@
 #include <memory>
 #include <queue>
 
-//////////////////////
-// 
-//////////////////
-struct PostListAndTermWeight {
-    public:
-	PostList * postlist;
-	om_weight  termweight;
-
-	PostListAndTermWeight(PostList * postlist_ = 0,
-			      om_weight termweight_ = 0)
-		: postlist(postlist_),
-		  termweight(termweight_)
-		  {}
-	~PostListAndTermWeight() {}
-};
-
 /////////////////////////////////////////////
 // Comparison operators which we will need //
 /////////////////////////////////////////////
 
-// Return true if a has more postings than b
+/** Class providing an operator which returns true if a has a (strictly)
+ *  greater number of postings than b.
+ */
 class PLPCmpGt {
     public:
+	/** Return true if and only if a has a strictly greater number of
+	 *  postings than b.
+	 */
         bool operator()(const PostList *a, const PostList *b) {
             return a->get_termfreq() > b->get_termfreq();
         }
 };
 
 /** Class providing an operator which returns true if a has a (strictly)
- *  lower termweight than b.
+ *  smaller number of postings than b.
+ */
+class PLPCmpLt {
+    public:
+	/** Return true if and only if a has a strictly smaller number of
+	 *  postings than b.
+	 */
+        bool operator()(const PostList *a, const PostList *b) {
+            return a->get_termfreq() < b->get_termfreq();
+        }
+};
+
+/** Class providing an operator which returns true if a has a (strictly)
+ *  greater termweight than b.
  */
 class PlCmpGtTermWt {
     public:
 	/** Return true if and only if a has a strictly greater termweight
 	 *  than b.
 	 */
-	bool operator()(const PostListAndTermWeight & a,
-			const PostListAndTermWeight & b) {
-	    DebugMsg("termweights are: " << a.termweight << " and " <<
-		     b.termweight << endl);
-	    return a.termweight > b.termweight;
+	bool operator()(const PostList *a, const PostList *b) {
+	    DebugMsg("termweights are: " << a->get_maxweight() << " and " <<
+		     b->get_maxweight() << endl);
+	    return a->get_maxweight() > b->get_maxweight();
 	}
-};
-
-// Return true if a has fewer postings than b
-class PLPCmpLt {
-    public:
-        bool operator()(const PostListAndTermWeight & a,
-			const PostListAndTermWeight & b) {
-            return a.postlist->get_termfreq() < b.postlist->get_termfreq();
-        }
 };
 
 // Comparison which sorts equally weighted MSetItems in docid order
@@ -116,22 +108,19 @@ bool msetcmp_reverse(const OmMSetItem &a, const OmMSetItem &b) {
     return false;
 }
 
-
-
 PostList *
-LocalMatch::build_and_tree(vector<PostListAndTermWeight> &postlists)
+LocalMatch::build_and_tree(vector<PostList *> &postlists)
 {
     // Build nice tree for AND-ed terms
     // SORT list into ascending freq order
     // AND last two elements, then AND with each subsequent element
 	
-    vector<PostListAndTermWeight>::const_iterator i;
+    vector<PostList *>::const_iterator i;
     for (i = postlists.begin(); i != postlists.end(); i++) {
-	if (i->postlist->get_termfreq() == 0) {
+	if ((*i)->get_termfreq() == 0) {
 	    // a zero freq term => the AND has zero freq
-	    vector<PostListAndTermWeight>::const_iterator j;
-	    for (j = postlists.begin(); j != postlists.end(); j++)
-		delete j->postlist;
+	    for (i = postlists.begin(); i != postlists.end(); i++)
+		delete *i;
 	    postlists.clear();
 	    break;
 	}
@@ -141,18 +130,18 @@ LocalMatch::build_and_tree(vector<PostListAndTermWeight> &postlists)
     
     stable_sort(postlists.begin(), postlists.end(), PLPCmpLt());
     
-    PostList *pl = postlists.back().postlist;
+    PostList *pl = postlists.back();
     postlists.pop_back();
     while (!postlists.empty()) {
 	// NB right is always <= left - we use this to optimise.
-	pl = new AndPostList(postlists.back().postlist, pl, this);
+	pl = new AndPostList(postlists.back(), pl, this);
 	postlists.pop_back();
     }
     return pl;
 }
 
 PostList *
-LocalMatch::build_or_tree(vector<PostListAndTermWeight> &postlists)
+LocalMatch::build_or_tree(vector<PostList *> &postlists)
 {
     // Build nice tree for OR-ed postlists
     // Want postlists with most entries to be at top of tree, to reduce
@@ -163,16 +152,13 @@ LocalMatch::build_or_tree(vector<PostListAndTermWeight> &postlists)
     // FIXME: try using a heap instead (C++ sect 18.8)?
 
     priority_queue<PostList *, vector<PostList *>, PLPCmpGt> pq;
-    vector<PostListAndTermWeight>::const_iterator i;
+    vector<PostList *>::const_iterator i;
     for (i = postlists.begin(); i != postlists.end(); i++) {
 	// for an OR, we can just ignore zero freq terms
-	if (i->postlist == 0) {
-	    // This shouldn't happen, but would mean that a postlist
-	    // didn't get opened.  Might as well try and recover.
-	} else if (i->postlist->get_termfreq() == 0) {
-	    delete i->postlist;
+	if ((*i)->get_termfreq() == 0) {
+	    delete *i;
 	} else {
-	    pq.push(i->postlist);
+	    pq.push(*i);
 	}
     }
     postlists.clear();
@@ -196,8 +182,6 @@ LocalMatch::build_or_tree(vector<PostListAndTermWeight> &postlists)
 	pq.push(pl);
     }
 }
-
-
 
 ////////////////////////////////////
 // Initialisation and cleaning up //
@@ -326,45 +310,64 @@ LocalMatch::set_weighting(IRWeight::weight_type wt_type_)
 // Make a postlist from a vector of query objects.
 // Operation must be either AND or OR.
 // Optimise query by building tree carefully.
-PostListAndTermWeight
+PostList *
 LocalMatch::postlist_from_queries(om_queryop op,
 				  const vector<OmQueryInternal *> &queries)
 {
-    Assert(op == OM_MOP_OR || op == OM_MOP_AND);
+    Assert(op == OM_MOP_OR || op == OM_MOP_AND || op == OM_MOP_NEAR ||
+	   op == OM_MOP_PHRASE);
     Assert(queries.size() >= 2);
 
     // Open a postlist for each query, and store these postlists in a vector.
-    vector<PostListAndTermWeight> postlists;
+    vector<PostList *> postlists;
     postlists.reserve(queries.size());
 
     vector<OmQueryInternal *>::const_iterator q;
     for(q = queries.begin(); q != queries.end(); q++) {
 	postlists.push_back(postlist_from_query(*q));
 	DebugMsg("Made postlist: get_termfreq() = " <<
-		 postlists.back().postlist->get_termfreq() << endl);
+		 postlists.back()->get_termfreq() << endl);
     }
 
     // Build tree
-    if (op == OM_MOP_AND) {
-	return build_and_tree(postlists);
+    if (op == OM_MOP_AND) return build_and_tree(postlists);
+
+    if (op == OM_MOP_NEAR) {
+	PostList *res = build_and_tree(postlists);
+// FIXME:
+//	return new NearPostList(res, queries.size(), // FIXME: user specified window size...
+//				postlists);
+    }
+
+    if (op == OM_MOP_PHRASE) {
+	PostList *res = build_and_tree(postlists);
+// FIXME:
+//	return new PhrasePostList(res, queries.size(), // FIXME: user specified window size...
+//				  postlists);
     }
 
     // OK, it's an OR then...
     
     // Select top terms
-    if(max_or_terms != 0) {
+    if (max_or_terms != 0) {
 	DebugMsg("Selecting top " << max_or_terms << " terms, out of " <<
 		 postlists.size() << "." << endl);
-	if(postlists.size() > max_or_terms) {
+	if (postlists.size() > max_or_terms) {
+	    // FIXME: this doesn't work correctly for non-LeafPostList-s
+	    // since get_maxweight() isn't valid before next() or skip_to()
+	    vector<PostList *>::iterator j;
+	    for (j = postlists.begin(); j != postlists.end(); j++) {
+		(*j)->recalc_maxweight();
+	    }
 	    nth_element(postlists.begin(), postlists.begin() + max_or_terms,
 			postlists.end(), PlCmpGtTermWt());
 	    DebugMsg("Discarding " << (postlists.size() - max_or_terms) <<
 		     " terms." << endl);
-	    
-	    vector<PostListAndTermWeight>::const_iterator i;
+
+	    vector<PostList *>::const_iterator i;
 	    for (i = postlists.begin() + max_or_terms;
 		 i != postlists.end(); i++) {
-		delete i->postlist;
+		delete *i;
 	    }
 	    postlists.erase(postlists.begin() + max_or_terms,
 			    postlists.end());
@@ -376,11 +379,9 @@ LocalMatch::postlist_from_queries(om_queryop op,
 
 // Make a postlist from a query object - this is called recursively down
 // the query tree.
-PostListAndTermWeight
+PostList *
 LocalMatch::postlist_from_query(const OmQueryInternal *query_)
 {
-    PostListAndTermWeight result;
-
     // This should be true happen, because we check the
     // top level of the query, and !isdefined should only
     // ever occur there.
@@ -390,64 +391,46 @@ LocalMatch::postlist_from_query(const OmQueryInternal *query_)
 	case OM_MOP_LEAF:
 	    // Make a postlist for a single term
 	    Assert(query_->subqs.size() == 0);
-	    if (database->term_exists(query_->tname)) {
-		DebugMsg("Leaf: tname = " << query_->tname << endl);
-		result.postlist = mk_postlist(query_->tname);
-
-		// FIXME: use wqf here
-		result.termweight = term_weights[query_->tname];
-	    } else {
+	    if (!database->term_exists(query_->tname)) {
 		DebugMsg("Leaf: tname = " << query_->tname << " (not in database)" << endl);
 		// Term doesn't exist in this database.  However, we create
 		// a (empty) postlist for it to help make distributed searching
 		// cleaner (term might exist in other databases).
 		// This is similar to using the muscat3.6 zerofreqs option.
-		result.postlist = new EmptyPostList();
+		return new EmptyPostList();
 	    }
-	    break;
+	    DebugMsg("Leaf: tname = " << query_->tname << endl);
+	    return mk_postlist(query_->tname);
 	case OM_MOP_AND:
 	case OM_MOP_OR:
-	    // Build a tree of postlists for AND or OR
-	    result = postlist_from_queries(query_->op, query_->subqs);
-	    break;
+	case OM_MOP_PHRASE:
+	case OM_MOP_NEAR:
+	    // Build a tree of postlists for AND, OR, PHRASE, or NEAR
+	    // FIXME: NEAR and PHRASE should take a "window size"
+	    return postlist_from_queries(query_->op, query_->subqs);
 	case OM_MOP_FILTER:
 	    Assert(query_->subqs.size() == 2);
-	    result.postlist = new FilterPostList(
-				postlist_from_query(query_->subqs[0]).postlist,
-				postlist_from_query(query_->subqs[1]).postlist,
-				this);
-	    break;
+	    return new FilterPostList(postlist_from_query(query_->subqs[0]),
+				      postlist_from_query(query_->subqs[1]),
+				      this);
 	case OM_MOP_AND_NOT:
 	    Assert(query_->subqs.size() == 2);
-	    result.postlist = new AndNotPostList(
-				postlist_from_query(query_->subqs[0]).postlist,
-				postlist_from_query(query_->subqs[1]).postlist,
-				this);
-	    break;
+	    return new AndNotPostList(postlist_from_query(query_->subqs[0]),
+				      postlist_from_query(query_->subqs[1]),
+				      this);
 	case OM_MOP_AND_MAYBE:
 	    Assert(query_->subqs.size() == 2);
-	    result.postlist = new AndMaybePostList(
-				postlist_from_query(query_->subqs[0]).postlist,
-				postlist_from_query(query_->subqs[1]).postlist,
-				this);
+	    return new AndMaybePostList(postlist_from_query(query_->subqs[0]),
+					postlist_from_query(query_->subqs[1]),
+					this);
 	    break;
 	case OM_MOP_XOR:
 	    Assert(query_->subqs.size() == 2);
-	    result.postlist = new XorPostList(
-				postlist_from_query(query_->subqs[0]).postlist,
-				postlist_from_query(query_->subqs[1]).postlist,
-				this);
-	    break;
-	case OM_MOP_NEAR:
-	    Assert(query_->subqs.size() == 2);
-	 // FIXME: last 2 parameters should be specifiable...
-	    result.postlist = new NearPostList(
-				postlist_from_query(query_->subqs[0]).postlist,
-				postlist_from_query(query_->subqs[1]).postlist,
-				this, 1, false);
-	    break;
+	    return new XorPostList(postlist_from_query(query_->subqs[0]),
+				   postlist_from_query(query_->subqs[1]),
+				   this);
     }
-    return result;
+    Assert(false);
 }
 
 ////////////////////////
@@ -502,7 +485,7 @@ LocalMatch::build_query_tree()
 	select_query_terms();
 
 	DebugMsg("LocalMatch::build_query_tree()" << endl);
-	query = postlist_from_query(&users_query).postlist;
+	query = postlist_from_query(&users_query);
 	DebugMsg("LocalMatch::query = (" << query->intro_term_description() <<
 		 ")" << endl);
     }
